feat: add service and gateway project generators
Replace stub functions with full implementations that generate:
- pom.xml with all dependencies and build plugins
- application.yml / application-local.yml / application-prod.yml
- logback-spring.xml, MainApplication.java, test class
- db/migration/.gitkeep
Gateway variant adds cartisan-security dependency and sa-token config.

Co-Authored-By: Claude Opus 4.6 <noreply@anthropic.com>